<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.fragmentquran.QuranFragment">

    <LinearLayout
        android:id="@+id/ml_quran"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:drawableEnd="@drawable/ic_search_24"
            android:hint="@string/search_surah_name"
            android:inputType="text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:theme="@style/ThemeEditTextLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/rl_quran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/s_juzz"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_last_read_ayah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_toStartOf="@+id/cv_fav_ayah"
                app:cardBackgroundColor="@color/purple_700"
                app:cardCornerRadius="@dimen/medium_margin">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_last_read_ayah"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="@dimen/smaller_margin"
                    android:src="@drawable/ic_menu_book_white" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_fav_ayah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                app:cardBackgroundColor="@color/purple_700"
                app:cardCornerRadius="@dimen/medium_margin">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_fav_ayah"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="@dimen/smaller_margin"
                    android:src="@drawable/ic_favorite_white"/>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_stared_ayah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rl_quran"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:orientation="horizontal"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/list_stared_surah" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_quran_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/dark_200"
            app:layout_constraintTop_toBottomOf="@id/rv_stared_ayah"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/small_margin"
            app:cardCornerRadius="@dimen/medium_margin">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_quran_content"
                android:fillViewport="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_loading_all_surah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/loading"
                    android:textSize="@dimen/large_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/sl_quran"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_quran_surah"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/list_all_surah" />
                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>